--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bluebird": "^3.5.1",
-    "bootstrap": "^4.0.0",
-    "fredux": "^2.0.0",
+    "bluebird": "^3.5.3",
+    "bootstrap": "^4.1.3",
+    "fredux": "^2.0.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
-    "npm": "^6.0.1",
-    "popper.js": "^1.14.3",
-    "prop-types": "^15.6.1",
-    "query-string": "^6.0.0",
-    "ramda": "^0.25.0",
-    "react": "^16.3.1",
+    "npm": "^6.4.1",
+    "popper.js": "^1.14.5",
+    "prop-types": "^15.6.2",
+    "query-string": "^6.2.0",
+    "ramda": "^0.26.0",
+    "react": "^16.6.3",
     "react-cookies": "^0.1.0",
-    "react-dom": "^16.3.1",
-    "react-icons": "^2.2.7",
-    "react-intl": "^2.4.0",
-    "react-redux": "^5.0.7",
-    "react-responsive-modal": "^3.0.3",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
-    "redux": "^3.7.2",
+    "react-dom": "^16.6.3",
+    "react-icons": "^3.2.2",
+    "react-intl": "^2.7.2",
+    "react-redux": "^5.1.1",
+    "react-responsive-modal": "^3.5.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1",
+    "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
-    "redux-promise-middleware": "^5.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "homepage": "./",
   "scripts": {
