--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "startwithapi": "react-scripts start & npm run apiserver",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "apiserver": "node src/core/server/index.js"
   },
   "devDependencies": {
     "jest": "^23.6.0",
+    "json-server": "^0.14.0",
     "redux-devtools-extension": "^2.13.5"
   },
   "browserslist": [
