--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.5.3",
     "bootstrap": "^4.1.3",
     "fredux": "^2.0.1",
+    "handlebars": "^4.5.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
     "npm": "^6.4.1",
